[package]
name = "rusteval"
version = "0.1.0"
authors = ["James Halsall <james.halsall@inviqa.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13.5"
tokio = { version = "0.2.20", features = ["full"]}
url = "2.1.1"